Remove 2.6 and flake8, tweak tox.ini, clean up

--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -13,8 +13,9 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pip install -U pip
-    py.test --basetemp={envtmpdir}
+    pip install -U pip wheel
+    pip install -e .
+    py.test --doctest-modules --cov={{ cookiecutter.project_slug }} {posargs: {{ cookiecutter.project_slug }} tests}
 {% else %}
 commands = python setup.py test
 {%- endif %}
