--- a/{{cookiecutter.project_slug}}/requirements_dev.txt
+++ b/{{cookiecutter.project_slug}}/requirements_dev.txt
@@ -10,4 +10,5 @@ Sphinx==1.4.4
 cryptography==1.4
 PyYAML==3.11{% endif %}
 {% if cookiecutter.use_pytest == 'y' -%}
-pytest==2.9.2{%- endif %}
+pytest==2.9.2
+pytest-cov==2.3.1{%- endif %}
